Fix some overflow issue

--- a/src/global.scss
+++ b/src/global.scss
@@ -17,7 +17,7 @@
     3. Allow percentage-based heights in the application
   */
   html, body {
-    height: 100%;
+    height: 100dvh;
   }
   /*
     Typographic tweaks!
